--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -22,7 +22,7 @@ $putih: #FFF;
                 width: 40px;
                 height: 67px;
                 max-width: unset;
-                background-image: url("/images/logo-eazy-icon-small.png");
+                background-image: url("../images/logo-eazy-icon-small.png");
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: contain;
@@ -32,7 +32,7 @@ $putih: #FFF;
 
     &.expanded .navbar-header .navbar-brand .brand-logo {
         width: 120px;
-        background-image: url("/images/logo-eazy-small.png");
+        background-image: url("../images/logo-eazy-small.png");
     }
 
     &.menu-light .navigation {
@@ -82,9 +82,13 @@ $putih: #FFF;
 .eazy-shortcut {
     display: flex;
     gap: 3rem;
+    width: 100%;
+    overflow-x: auto;
+    padding-bottom: .5rem;
     
     .eazy-shortcut-item {
         display: flex;
+        align-items: center;
         cursor: pointer;
         
         .eazy-shortcut-icon {
@@ -107,10 +111,13 @@ $putih: #FFF;
 
         .eazy-shortcut-label {
             display: flex;
-            align-items: center;
+            flex-direction: column;
+            align-items: start;
+            justify-content: center;
             margin-left: 1rem;
             color: $eazy-text;
             font-weight: 500;
+            white-space: nowrap;
         }
 
         &.active {
@@ -129,6 +136,27 @@ $putih: #FFF;
     
 }
 
+.eazy-badge {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
+    height: 32px; 
+    width: 32px;
+    svg {
+        height: 20px;
+        width: 20px;
+    }
+
+    &.blue { 
+        background-color: #F0F4FF; 
+        svg { color: #356CFF }
+    }
+    &.red { 
+        background-color: #FFF5F5; 
+        svg { color: #FF4949 }
+    }
+}
 
 /* BOOTSTRAP OVERRIDE */
 .main-menu.menu-light .navigation > li ul .active {
@@ -160,6 +188,14 @@ $putih: #FFF;
 .form-check-input:checked[type="radio"] {
     background-image: url("data:image/svg+xml;charset=utf8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 9.5 7.5'%3e%3cpolyline points='0.75 4.35 4.18 6.75 8.75 0.75' style='fill:none;stroke:%23fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:1.5px'/%3e%3c/svg%3e") !important;
     background-size: 10px;   
+}
+.table th, .table td {
+    color: $eazy-text !important;
+}
+
+/* SELECT2 OVERRIDE */
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    color: $eazy-text !important;
 }
 
 
