feat(new-student-invoice): frontend backend integration

--- a/resources/sass/jstree-custom-table.scss
+++ b/resources/sass/jstree-custom-table.scss
@@ -80,3 +80,8 @@
 .jstree-node[aria-level="3"] > .jstree-anchor > .text { width: 571px }
 .jstree-node[aria-level="4"] > .jstree-anchor > .text { width: 547px }
 .jstree-node[aria-level="5"] > .jstree-anchor > .text { width: 523px }
+
+// .jstree-default .jstree-disabled.jstree-clicked,
+// .jstree-default.jstree-checkbox-no-clicked .jstree-clicked.jstree-hovered {
+//     background: transparent !important;
+// }
